# quizmaster

./: .gitignore  .travis.yml  README.md  httpd.conf  quizmaster.cabal  site.hs
.github/workflows/: haskell-ci.yml
data/: .gitignore  README.md  site.hs
src/: quizmaster.hs
test/: spec.hs
