name:                quizmaster
version:             0
synopsis:            Spaced repetition flash card learning system.
homepage:            https://github.com/peti/quizmaster
bug-reports:         https://github.com/peti/quizmaster/issues
license:             AGPL-3
license-file:        LICENSE
author:              Peter Simons
maintainer:          simons@cryp.to
category:            Learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10
description:         Spaced repetition flash card learning system implemented as a CGI.
tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2
                   , GHC == 8.4.4, GHC == 8.6.2

source-repository head
  type:              git
  location:          https://github.com/peti/quizmaster.git

executable quizmaster
  main-is:           quizmaster.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:     base < 5, filepath, cgi, random, time, containers

executable site
  main-is:           site.hs
  default-language:  Haskell2010
  build-depends:     base < 5, filepath, blaze-html

test-suite spec
  type:              exitcode-stdio-1.0
  main-is:           spec.hs
  hs-source-dirs:    test
  default-language:  Haskell2010
  build-depends:     base, hspec
